# alfred-workflow-template-rust

./: .gitignore  Cargo.toml  build-workflow.sh  info.plist
src/: main.rs
